# app-service-workshop

./: .gitattributes  .gitignore  README.md
.github/workflows/: build-push-command-api-acr.yml  build-push-command-frontend-acr.yml  build-push-guide-website.yaml  build-push-order-processing-acr.yml  build-push-receipt-generator.yml  build-push-services.yml  build-push-stock-manager-acr.yml  create-release.yml
instructions/: _config.yml
instructions/_entries/: 01 introduction.md  01-00-introduction.md  01-01 presentation.md  01-01-presentation.md  01-02 prerequisites.md  01-02-prerequisites.md  01-03-naming-conventions.md  02 lab scenario 1.md  02-00-lab-scenario-1.md  02-01 intro.md  02-01-intro.md  02-02 first app.md  02-02 first web app.md  02-02-first-web-app.md  02-03 Conclusion.md  02-03 vanilla code dive.md  02-04 enter dapr.md  02-05 without help.md  02-06 Conclusion.md  03 lab scenario 2.md  03-01 intro.md  03-02 app settings.md  03-02 creation resource.md  03-02 creation resources.md  03-02 pub sub.md  03-02 slot.md  03-02-creation-resources.md  03-03 app settings.md  03-03 deployment center.md  03-03 service invocation.md  03-04 app settings.md  03-04 bindings.md  03-04 slot.md  03-04-slot.md  03-05 deployment center.md  03-05 monitoring.md  03-05 scaling.md  03-05-deployment-center.md  03-06 advanced.md  03-06 custom domain.md  (+30 more)
instructions/_includes/: nav.html
instructions/_site/: index.html
src/Lab2/implementations/receipt-generator/: Cargo.toml  Dockerfile
src/Lab2/implementations/receipt-generator/src/: main.rs  types.rs
(+47 files in other folders)
