[package]
name = "receipt-generator"
version = "0.1.0"
edition = "2018"

# Including a static open SSL on Unix, this won't work on windows so don't target it
[target.'cfg(target_os = "unix")'.dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }

[dependencies]
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"

[profile.release]
codegen-units = 1
lto = true